welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:4: error: not found: value writeMessga
writeMessga("x");
^